updated README, created basic front end for store, tried to link google fonts, made it suck less

--- a/data.html
+++ b/data.html
@@ -6,7 +6,7 @@
     <title>Campfire Coffee - Data View</title>
   </head>
   <body>
-
+    <h1>Campfire Coffee - Sales Data Visualization</h1>
     <script src= js/app.js>
 
     </script>
