--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Campfire Coffee</title>
+    <title>Campfire Coffee - Welcome!</title>
+    <link href="http://fonts.googleapis.com/css?family=Average|Courgette" rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-
+    <h1>Welcome to Campfire Coffee! Once you try it you won't go back</h1>
+    <h2>Stores and Operating Hours</h2>
+    <div class="hours">
+    <h3>Pike Place Market</h3>
+    <ul>
+      <li>6:00am to 9:00pm, 7 days a week</li>
+    </ul>
+    <h3>Capitol Hill</h3>
+    <ul>
+      <li>6:00am to 9:00pm, 7 days a week</li>
+    </ul>
+    <h3>Seattle Public Library</h3>
+    <ul>
+      <li>6:00am to 9:00pm, 7 days a week</li>
+    </ul>
+    <h3>South Lake Union</h3>
+    <ul>
+      <li>6:00am to 9:00pm, 7 days a week</li>
+    </ul>
+    <h3>Sea-Tac Airport</h3>
+    <ul>
+      <li>6:00am to 9:00pm, 7 days a week</li>
+    </ul>
+    <h3>Website Sales</h3>
+    <ul>
+      <li>6:00am to 9:00pm, 7 days a week</li>
+    </ul>
+  </div>
+    <div class="campfire">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Campfire_Pinecone.png" alt="" />
+    </div>
   </body>
 </html>
