initial render function, with table pushes

--- a/data.html
+++ b/data.html
@@ -4,9 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>Campfire Coffee - Data View</title>
+      <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <h1>Campfire Coffee - Sales Data Visualization</h1>
+    <div id="tablePrint">
+
+    </div>
     <script src= js/app.js>
 
     </script>
