--- a/index.html
+++ b/index.html
@@ -7,36 +7,73 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <h1>Welcome to Campfire Coffee! Once you try it you won't go back</h1>
-    <h2>Stores and Operating Hours</h2>
-    <div class="hours">
-    <h3>Pike Place Market</h3>
-    <ul>
-      <li>6:00am to 9:00pm, 7 days a week</li>
-    </ul>
-    <h3>Capitol Hill</h3>
-    <ul>
-      <li>6:00am to 9:00pm, 7 days a week</li>
-    </ul>
-    <h3>Seattle Public Library</h3>
-    <ul>
-      <li>6:00am to 9:00pm, 7 days a week</li>
-    </ul>
-    <h3>South Lake Union</h3>
-    <ul>
-      <li>6:00am to 9:00pm, 7 days a week</li>
-    </ul>
-    <h3>Sea-Tac Airport</h3>
-    <ul>
-      <li>6:00am to 9:00pm, 7 days a week</li>
-    </ul>
-    <h3>Website Sales</h3>
-    <ul>
-      <li>6:00am to 9:00pm, 7 days a week</li>
-    </ul>
-  </div>
-    <div class="campfire">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Campfire_Pinecone.png" alt="" />
-    </div>
+    <header>
+      <h1>Campfire Coffee: From the tent to the fire, it's our coffee you require</h1>
+      <nav>
+        <ul>
+          <li><a href="#">Locations</a></li>
+          <li><a href="#">Merch</a></li>
+          <li><a href="#">Local Resources</a></li>
+          <li><a href="#">Our History</a></li>
+          <li><a href="#">Our Mission</a></li>
+        </ul>
+      </nav>
+    </header>
+    <article class="spanImage">
+      <img src="img/campsite-tent-night.jpg" alt="pretty" />
+    </article>
+    <section class="locationsContainer">
+      <section class="location1">
+        <h3>Pike Place Market</h3>
+          <p>
+            <em>Find Us:</em> 123 4th ave
+            <p></p>
+            <em>Call:</em> 555 555 5555
+            <p></p>
+            <em>Hours:</em> 6am to 9pm, 7 days a week
+          </p>
+      </section>
+      <section class="location2">
+        <h3>Capitol Hill</h3>
+          <p>
+            <em>Find Us:</em> 456 12th ave
+            <p></p>
+            <em>Call:</em> 555 555 4444
+            <p></p>
+            <em>Hours:</em> 6am to 9pm, 7 days a week
+          </p>
+      </section>
+      <section class="location3">
+        <h3>Seattle Public Library</h3>
+          <p>
+            <em>Find Us:</em> 456 12th ave
+            <p></p>
+            <em>Call:</em> 555 555 4444
+            <p></p>
+            <em>Hours:</em> 6am to 9pm, 7 days a week
+          </p>
+      </section>
+      <section class="location4">
+        <h3>South Lake Union</h3>
+          <p>
+            <em>Find Us:</em> 789 Dexter ave
+            <p></p>
+            <em>Call:</em> 425 555 4444
+            <p></p>
+            <em>Hours:</em> 6am to 9pm, 7 days a week
+          </p>
+      </section>
+      <section class="location5">
+        <h3>Seattle Public Library</h3>
+          <p>
+            <em>Find Us:</em> 456 12th ave
+            <p></p>
+            <em>Call:</em> 555 555 4444
+            <p></p>
+            <em>Hours:</em> 6am to 9pm, 7 days a week
+          </p>
+      </section>
+    </section>
+
   </body>
 </html>
