styled locations so they appear inline

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <header>
-      <h1>Campfire Coffee: From the tent to the fire, it's our coffee you require</h1>
+      <img src="img/logo.jpg" alt="" />
+      <h2>Campfire Coffee: <em>From the tent to the fire, it's our coffee you require</em></h1>
       <nav>
         <ul>
           <li><a href="#">Locations</a></li>
@@ -23,7 +24,8 @@
       <img src="img/campsite-tent-night.jpg" alt="pretty" />
     </article>
     <section class="locationsContainer">
-      <section class="location1">
+      <h3>Locations</h3>
+      <div class="location">
         <h3>Pike Place Market</h3>
           <p>
             <em>Find Us:</em> 123 4th ave
@@ -32,8 +34,8 @@
             <p></p>
             <em>Hours:</em> 6am to 9pm, 7 days a week
           </p>
-      </section>
-      <section class="location2">
+      </div>
+      <div class="location">
         <h3>Capitol Hill</h3>
           <p>
             <em>Find Us:</em> 456 12th ave
@@ -42,9 +44,9 @@
             <p></p>
             <em>Hours:</em> 6am to 9pm, 7 days a week
           </p>
-      </section>
-      <section class="location3">
-        <h3>Seattle Public Library</h3>
+      </div>
+      <div class="location">
+        <h3>Sea-Tac Airport</h3>
           <p>
             <em>Find Us:</em> 456 12th ave
             <p></p>
@@ -52,28 +54,48 @@
             <p></p>
             <em>Hours:</em> 6am to 9pm, 7 days a week
           </p>
-      </section>
-      <section class="location4">
+      </div>
+      <div class="location">
         <h3>South Lake Union</h3>
           <p>
-            <em>Find Us:</em> 789 Dexter ave
+            <em>Find Us:</em> 789 15th st
             <p></p>
             <em>Call:</em> 425 555 4444
             <p></p>
             <em>Hours:</em> 6am to 9pm, 7 days a week
           </p>
-      </section>
-      <section class="location5">
-        <h3>Seattle Public Library</h3>
+      </div>
+      <div class="location">
+        <h3>Seattle Library</h3>
           <p>
-            <em>Find Us:</em> 456 12th ave
+            <em>Find Us:</em> 4334 12th ave
             <p></p>
             <em>Call:</em> 555 555 4444
             <p></p>
             <em>Hours:</em> 6am to 9pm, 7 days a week
           </p>
-      </section>
+      </div>
     </section>
+    <article class="Mission">
+      <h3>Our Mission</h3>
+      <p>
+        lorem ipsum
+      </p>
+    </article>
+    <article class="History">
+      <h3>Our History</h3>
+      <p>
+        Lorem Ipsum
+      </p>
+    </article>
+    <article class="Resources">
+      <h3>Additional Resources</h3>
+      <ul>
+        <li><a href="#">REI</a></li>
+        <li><a href="#">Wildlife Conservation Project</a></li>
+        <li><a href="#">WA State Trails Association</a></li>
+      </ul>
+    </article>
 
   </body>
 </html>
