added more images, and displayed as block elements with text

--- a/index.html
+++ b/index.html
@@ -76,26 +76,30 @@
           </p>
       </div>
     </section>
-    <article class="Mission">
+    <section class="histContainer">
+    <div class="mission">
       <h3>Our Mission</h3>
       <p>
-        lorem ipsum
+        <img src="img/campfire.jpg" class="histImages" alt="" />
+        The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
       </p>
-    </article>
-    <article class="History">
+    </div>
+    <div class="history">
       <h3>Our History</h3>
       <p>
-        Lorem Ipsum
+        <img src="img/campfire-coffee.jpg" class="histImages" alt="" />
+        Cookie ice cream cheesecake. Dessert candy liquorice macaroon. Marshmallow donut cake chupa chups danish dragée pudding chocolate cake. Marshmallow marshmallow bear claw.
       </p>
-    </article>
-    <article class="Resources">
+    </div>
+    <div class="resources">
       <h3>Additional Resources</h3>
       <ul>
         <li><a href="#">REI</a></li>
         <li><a href="#">Wildlife Conservation Project</a></li>
         <li><a href="#">WA State Trails Association</a></li>
       </ul>
-    </article>
+    </div>
+  </section>
 
   </body>
 </html>
