added remaining About Company sections, including block display with text wrap

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
           <li><a href="#">Local Resources</a></li>
           <li><a href="#">Our History</a></li>
           <li><a href="#">Our Mission</a></li>
+          <li><a href="#">Sustainability</a></li>
+          <li><a href="#">Learn About Our Products</a></li>
         </ul>
       </nav>
     </header>
@@ -93,6 +95,7 @@
     </div>
     <div class="resources">
       <h3>Additional Resources</h3>
+      <img src="img/campfire-family.jpg" class="histImages" alt="" />
       <ul>
         <li><a href="#">REI</a></li>
         <li><a href="#">Wildlife Conservation Project</a></li>
