html added in data to create a form

--- a/data.html
+++ b/data.html
@@ -11,6 +11,23 @@
     <div id="tablePrint">
 
     </div>
+
+    <form id="newStoreForm">
+      <fieldset>
+        <legend>Enter New Store</legend>
+        <label for="storeName">Store Name: </label>
+        <input name="storeName" type="text" size="30">
+        <label for="minCustomer">Minimum Customers Number: </label>
+        <input name="minCustomer" type="text" size="10">
+        <label for="maxCustomer">Maximum Customers Number: </label>
+        <input name="maxCustomer" type="text" size="10">
+        <label for="avgCups">Average Number Cups: </label>
+        <input name="avgCups" type="text" size="10">
+        <label for="avgPounds">Average Pounds: </label>
+        <input name="avgPounds" type="text" size="10">
+        <button id="newStoreBtn" type="submit">Submit New Store</button>
+      </fieldset>
+    </form>
     <script src= js/app.js>
 
     </script>
