final commit, added final functionality for adding a new store and having data render at the bottom of the data.html page. Also cleaned up submission form a bit

--- a/data.html
+++ b/data.html
@@ -14,16 +14,16 @@
 
     <form id="newStoreForm">
       <fieldset>
-        <legend>Enter New Store</legend>
-        <label for="storeName">Store Name: </label>
+        <legend><strong>Enter New Store</strong> (WILL DISPLAY AT THE BOTTOM)</legend>
+        <label for="storeName"><strong>Store Name: </strong></label>
         <input name="storeName" type="text" size="30" >
-        <label for="minCustomer">Minimum Customers Number: </label>
+        <label for="minCustomer"><strong>Minimum Customers: </strong></label>
         <input name="minCustomer" type="text" size="10" >
-        <label for="maxCustomer">Maximum Customers Number: </label>
+        <label for="maxCustomer"><strong>Maximum Customers: </strong></label>
         <input name="maxCustomer" type="text" size="10" >
-        <label for="avgCups">Average Number Cups: </label>
+        <label for="avgCups"><strong>Average Cups: </strong></label>
         <input name="avgCups" type="text" size="10" >
-        <label for="avgPounds">Average Pounds: </label>
+        <label for="avgPounds"><strong>Average Pounds: </strong></label>
         <input name="avgPounds" type="text" size="10" >
         <button id="newStoreBtn" type="submit">Submit New Store</button>
       </fieldset>
