made css changes to data page, specific to data table.

--- a/data.html
+++ b/data.html
@@ -6,7 +6,7 @@
     <title>Campfire Coffee - Data View</title>
       <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
-  <body>
+  <body id="data-body">
     <h1>Campfire Coffee - Sales Data Visualization</h1>
     <div id="tablePrint">
 
