small changes to the index page, mostly adding flex properties to navbar

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <img src="img/logo.jpg" alt="" />
       <h2>Campfire Coffee: <em>From the tent to the fire, it's our coffee you require</em></h1>
       <nav>
-        <ul>
+        <ul id="navbarList">
           <li><a href="#">Locations</a></li>
           <li><a href="#">Merch</a></li>
           <li><a href="#">Local Resources</a></li>
