additional css changes. Created flex-friendly containers in order to apply flex properties.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
     <article class="spanImage">
-      <img src="img/campsite-tent-night.jpg" alt="pretty" />
+      <!-- <img src="img/campsite-tent-night.jpg" alt="pretty" /> -->
     </article>
     <h3>Locations</h3>
     <section class="locationsContainer">
@@ -80,22 +80,25 @@
       </div>
     </section>
     <section class="histContainer">
+    <h3>Our Mission</h3>
     <div class="mission">
-      <h3>Our Mission</h3>
-      <p>
         <img src="img/campfire.jpg" class="histImages" alt="" />
+      <p>
         The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.
       </p>
     </div>
+    <h3>Our History</h3>
     <div class="history">
-      <h3>Our History</h3>
+      <img src="img/campfire-coffee.jpg" class="histImages" alt="" />
       <p>
-        <img src="img/campfire-coffee.jpg" class="histImages" alt="" />
-        Cookie ice cream cheesecake. Dessert candy liquorice macaroon. Marshmallow donut cake chupa chups danish dragée pudding chocolate cake. Marshmallow marshmallow bear claw.
+        Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.
+        <br>
+        <br>
+        Efficiently unleash cross-media information without cross-media value. Quickly maximize timely deliverables for real-time schemas. Dramatically maintain clicks-and-mortar solutions without functional solutions.
       </p>
     </div>
+    <h3>Additional Resources</h3>
     <div class="resources">
-      <h3>Additional Resources</h3>
       <img src="img/campfire-family.jpg" class="histImages" alt="" />
       <ul>
         <li><a href="#">REI</a></li>
