final commit, added some hover effects to index.html

--- a/data.html
+++ b/data.html
@@ -7,7 +7,7 @@
       <link href="css/style.css" rel="stylesheet" type="text/css">
   </head>
   <body id="data-body">
-    <h1>Campfire Coffee - Sales Data Visualization</h1>
+    <h1 class="data-title">Campfire Coffee - Sales Data Visualization</h1>
     <div id="tablePrint">
 
     </div>
